--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 * {
+margin: 10px;
   text-align: center;
   font-family: 'Roboto Slab', serif;
 }
+
 
 button {
   font-family: 'Roboto Slab', serif;
