--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,60 @@ margin: 10px;
 button {
   font-family: 'Roboto Slab', serif;
 }
+
+
+body {
+  background-color: #f1f1f1;
+  margin: 0px;
+  padding: 0px;
+}
+
+
+.cup {
+  height: 140px;
+  width: 180px;
+  border: 6px solid #f1f1f1;
+  position: absolute;
+  top: 110%;
+  left: 40%;
+  border-radius: 0px 0px 70px 70px;
+  background: url("https://img.freepik.com/free-photo/full-frame-shot-brown-leather-background_23-2147951253.jpg?size=626&ext=jpg");
+  box-shadow: 0px 0px 0px 6px white;
+  background-repeat: repeat-x;
+  background-position: 0px 140px;
+  animation: fill 2.5s infinite;
+}
+
+@keyframes fill {
+  0% {
+    background-position: 0px 140px;
+  }
+  20% {
+    background-position: -450px 100px;
+  }
+  40% {
+    background-position: -900px 50px;
+  }
+  80% {
+    background-position: -1350px -40px;
+  }
+}
+
+.handle {
+  height: 70px;
+  width: 40px;
+  background-color: transparent;
+  border: 6px solid white;
+  position: relative;
+  left: 186px;
+  top: 2px;
+  border-radius: 0px 25px 80px 0px;
+}
+
+.cup-container {
+  z-index: -1;
+  position: absolute;
+  opacity: 0.35;
+  left: 37%;
+  top: 30%;
+}
