--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-margin: 10px;
+  margin: 10px;
   text-align: center;
   font-family: 'Roboto Slab', serif;
 }
@@ -22,8 +22,8 @@ body {
   width: 180px;
   border: 6px solid #f1f1f1;
   position: absolute;
-  top: 110%;
-  left: 40%;
+  /* top: 110%;
+  left: 4%; */
   border-radius: 0px 0px 70px 70px;
   background: url("https://img.freepik.com/free-photo/full-frame-shot-brown-leather-background_23-2147951253.jpg?size=626&ext=jpg");
   box-shadow: 0px 0px 0px 6px white;
@@ -60,8 +60,9 @@ body {
 
 .cup-container {
   z-index: -1;
-  position: absolute;
-  opacity: 0.35;
-  left: 37%;
-  top: 30%;
+  position: relative;
+  opacity: 0.25;
+  top: 40%;
+ left: 40%;
+ margin-left:-4%;
 }
